webapp/src/custom.scss
@import "./variables.scss";
@import "bootstrap/scss/bootstrap";

body {
  font-size: 0.875rem;
}

.feather {
  width: 16px;
  height: 16px;
  vertical-align: text-bottom;
}

/*
   * Sidebar
   */

.sidebar {
  position: fixed;
  top: 0;
  /* rtl:raw:
    right: 0;
    */
  bottom: 0;
  /* rtl:remove */
  right: 0;
  z-index: 100; /* Behind the navbar */
  padding: 48px 0 0; /* Height of navbar */
  // box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
  width: 450px;
  background-color: #ffffff;
}

@media (max-width: 767.98px) {
  .sidebar {
    top: 5rem;
  }
}

.sidebar-sticky {
  position: relative;
  top: 0;
  height: calc(100vh - 48px);
  padding-top: 0.5rem;
  overflow-x: hidden;
  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
}

.sidebar .nav-link {
  font-weight: 500;
  color: #333;
}

.sidebar .nav-link .feather {
  margin-right: 4px;
  color: #727272;
}

.sidebar .nav-link.active {
  color: #2470dc;
}

.sidebar .nav-link:hover .feather,
.sidebar .nav-link.active .feather {
  color: inherit;
}

.sidebar-heading {
  font-size: 0.75rem;
  text-transform: uppercase;
}

/*
   * Navbar
   */

.navbar-brand {
  padding-top: 0.75rem;
  padding-bottom: 0.75rem;
  font-size: 1rem;
  background-color: rgba(0, 0, 0, 0.25);
  box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.25);
}

.navbar .navbar-toggler {
  top: 0.25rem;
  right: 1rem;
}

.navbar .form-control {
  padding: 0.75rem 1rem;
  border-width: 0;
  border-radius: 0;
}

.form-control-dark {
  color: #fff;
  background-color: rgba(255, 255, 255, 0.1);
  border-color: rgba(255, 255, 255, 0.1);
}

.form-control-dark:focus {
  border-color: transparent;
  box-shadow: 0 0 0 3px rgba(255, 255, 255, 0.25);
}

.btn-primary {
  background: $primary;
  border-radius: $btn-border-radius;
  color: #ffffff;
}

.btn-primary:hover {
  background: #536cf0;
  color: #ffffff;
}

.btn-primary:active {
  background: #3e51b4;
  color: #ffffff;
}

// .btn-outlined {
//     background: #FFFFFF;
//     border: 1px solid #6A82FF;
//     border-radius: $btn-border-radius;
//     color: #6A82FF;
// }

// .btn-outlined:hover {
//     background: #FFFFFF;
//     border: 1px solid #5C74F2;
//     color: #6A82FF;
// }

// .btn-outlined:active {
//     background: #FFFFFF;
//     border: 1px solid #3E51B4;
//     color: #3E51B4;
// }

// btn icon
.btn-icon {
  border: none;
  border-radius: 50%;
  background-color: transparent;

  .outter-varient {
    display: grid;
    place-items: center;
  }
}

// input

input:invalid {
  color: $danger;
}

input[type="color"] {
  width: 50%;
  border: none;
}

// color picker
.color-picker {
  .color-picker-label {
    color:#30387D85;
    font-weight: 600;

  }

  .color-picker-input-wrapper {
    position: relative;
    width: 359px;
    height: 55px;
    background: rgba(226, 226, 230, 0.18);
    border: 1px solid rgba(48, 56, 125, 0.32);
    border-radius: 12px;
  
    .color-selector{
      position: absolute;
      top: 12px;
      right: 15px;
      width: 130px;
      height: 31px;
      box-shadow: none;
  
    }
  }
}


//icons

.icon-type-1 {
  height: 75px;
  width: 75px;
  border-radius: 50%;
}

.icon-type-1-inner {
  width: 55px;
  height: 55px;
  border-radius: 50%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 50%;
}

.icon-type-2 {
  height: 60px;
  width: 66px;
  border-radius: 20px;
  background-color: #ffffff;
  border: 2px solid #dadada;
}

.icon-type-2-inner {
  width: 55px;
  height: 55px;
  border-radius: 50%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 50%;
}

.icon-type-3 {
  height: 49.69px;
  width: 49.69px;
  border-radius: 50%;
  background-color: #ffffff;
  border: 1px solid rgba(48, 56, 125, 0.32);
  box-shadow: 0px 17.7395px 125px rgba(48, 56, 125, 0.32);
}

.icon-type-3-inner {
  width: 35px;
  height: 35px;
  border-radius: 50%;
  background-repeat: no-repeat;
  background-position: center;
  background-size: 50%;
}

// paragraphs

.para1 {
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
}

.para2 {
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 21px;
}

.para3 {
  font-style: normal;
  font-weight: 500;
  font-size: 12px;
  line-height: 18px;
}

// searchbar
.searchbar {
  background: #ffffff;
  box-shadow: 0px 17.7395px 137.186px rgba(48, 56, 125, 0.12);
  border: none;
  border-radius: 17.7395px;
}

// collection card
.collection-card {
  width: 249px;
  height: 176px;
  display: grid;
  place-items: center;
  cursor: move;

  .dot-menu {
    border: none;
    background-color: #ffffff;
    color: #d1d1d1;
    top: 3px;
    right: 15px;
  }

  .collection-card-body {
    display: grid;
    place-items: center;
  }

  .notification-dot-wrapper {
    position: absolute;
    top: 25px;
    right: 80px;
    color: #ffffff;
    width: 28px;
    height: 28px;
    border-radius: 50%;
  }

  .collection-title {
    color: #30387db0;
    font-weight: 600;
  }
}

// collection card wide
.collection-card-wide {
  width: 323px;
  height: 135px;
  display: grid;
  place-items: center;
  cursor: move;

  .dot-menu {
    border: none;
    background-color: #ffffff;
    color: #d1d1d1;
    top: 3px;
    right: 15px;
  }

  .favourite-icon {
    position: absolute;
    bottom: 10px;
    right: 18px;
  }
}

// collection-grid
.collection-grid {
  .collection-grid-title {
    color: #30387db0;
  }

  .horizontal-line {
    width: 80%;
    top: 10px;
    left: 190px;
    border: 1.18264px solid rgba(48, 56, 125, 0.12);
  }

  // horizontal scrollable menu
  .scroll-menu-wrapper {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;

    // to hide the scrollbar
    &::-webkit-scrollbar {
      display: none;
    }
  }
}

// collection item
.collection-item {
  width: 1002px;
  height: 86px;
  background: #ffffff;
  color: #30387db0;
  border: 1px solid rgba(48, 56, 125, 0.24);
  border-radius: 12px;

  .url-wrapper {
    width: 400px;
    overflow-wrap: break-word;
    word-wrap: break-word;
  }
}

// colection items card
.collection-items-card {
  width: 1146px;
  height: 920px;
  background: #ffffff;
  color: #30387db0;

  .collection-icon {
    position: absolute;
    top: 32px;
    left: 33px;
  }

  .collection-title {
    top: 42px;
    left: 145px;
  }

  .favourite-icon {
    top: 86px;
    left: 145px;
  }

  .dot-menu {
    border: none;
    background-color: #ffffff;
    color: #d1d1d1;
    top: 28px;
    right: 80px;
  }

  .collection-items-table {
    top: 156px;
    left: 57px;
    width: 1025px;
    height: 600px;
    overflow-x: hidden;
    overflow-y: auto;
  }

  .add-link-btn-wrapper {
    bottom: 57px;
    left: 41px;

    .add-link-btn {
      width: 210px;
    }
  }
}

//modals

// success modal
.success-modal {
  width: 583px;
  height: 436px;
  text-align: center;
  border-radius: 30px;
}

